# vitepress-pdf-export

./: .gitignore  Cargo.toml  LICENSE  conf.toml  example_conf.toml  mk_pdf.tape  readme.md
.config/: exa.dic  spellcheck.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  merge.rs  render.rs
src/snapshots/: vitepress_pdf_export__merge__tests__merge_toc.snap
